refactor : 불필요한 로직, 정보 요청 삭제 및 매개변수명 변경